Terminación de clase ExportacionArchivo