@@ -1,10 +1,9 @@
 package jcolonia.daw2025.tablasmvc;
 
-import java.io.File;
-import java.io.FileNotFoundException;
+import java.io.IOException;
 import java.io.PrintWriter;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 /**
@@ -12,7 +11,7 @@ import java.util.List;
  * Aplicación de texto usando tablas de multiplicar infantiles clásicas.
  * 
  * @author <a href="hernanj.higort@educa.jcyl.es">Hernán José Higuero Ortega</a>
- * @version 1.1 (20260311)
+ * @version 1.2 (20260316)
  */
 public class ExportacionArchivo {
 
@@ -26,15 +25,28 @@ public class ExportacionArchivo {
 	 * @param rutaArchivo la ruta del archivo
 	 */
 	public ExportacionArchivo(String rutaArchivo) {
-		refArchivos = Paths.get(rutaArchivo);
+		refArchivos = Path.of(rutaArchivo);
 	}
 	
 	/**
 	 * Guarda la tabla de multiplicar en un archivo de texto.
-	 * @param contenidos
+	 * @param contenidos a guardar.
 	 */
-	public void guardar(List<String> contenidos) {
+	public void guardar(List<String> contenidos) {		
+		try {
+			Files.deleteIfExists(refArchivos);
+			Path archivo = Files.createFile(refArchivos);
+			
+			PrintWriter out = new PrintWriter(Files.newBufferedWriter(archivo));
 		
+			for (String opcion : contenidos) {
+				out.println(opcion);
+			}
+			
+			out.close();
+		} catch (IOException e) {
+			System.err.printf("Error de escritura: %s", e.getLocalizedMessage());
+		}
 	}
 	
 }
